--- a/styles.css
+++ b/styles.css
@@ -92,7 +92,7 @@ header .profile-image:hover {
   margin: 30px;
   padding: 20px 40px 40px;
   max-width: 500px;
-  min-width: 300px;
+  min-width: 500px;
   text-align: left;
   background: #fff;
   border-bottom: 4px solid #ccc;
@@ -101,6 +101,14 @@ header .profile-image:hover {
 }
 .topic:hover {
   border-color: #ff99ff;
+}
+
+.hobbies-img {
+  padding: 5px;
+}
+
+.hobbies-img:hover {
+  transform: scale(1.1) rotate(-2deg);
 }
 
 ul.skills {
